--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.App-main {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,6 +26,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.card {
+  width: 20rem;
+  cursor: pointer;
 }
 
 @keyframes App-logo-spin {
